--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,11 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /* height: 100vh; */
+  /* background: linear-gradient(#2A00B7, #42006C); */
+  box-sizing: border-box;
+  background: black;
+  overflow-x: hidden;
 }
 
 code {
