--- a/src/App.css
+++ b/src/App.css
@@ -152,10 +152,14 @@ body {
 
 .filter-btn {
   background: transparent;
+  color: white;
   border: none;
   padding: 0.4rem 0.6rem;
   border-radius: 6px;
   cursor: pointer;
+}
+.filter-btn:hover {
+  color:white;
 }
 
 .filter-btn.active {
